manifests/base/network-policies/flink-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flink-operator
  labels:
    istio.io/dataplane-mode: ambient
